k3-milestone-4/deploy.shopping-p3-m1:1.0.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  creationTimestamp: null
  labels:
    app: shopping
  name: shopping-deploy-v1
  namespace: shopping
spec:
  replicas: 3
  selector:
    matchLabels:
      app: shopping
      version: "v1.0"
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: shopping
        version: "v1.0"
    spec:
      containers:
      - image: manningkubernetes/shopping-p3-m1:1.0
        name: shopping
        resources: {}
status: {}
