k3-milestone-4/service.shopping-p3-m1:2.0.yaml
apiVersion: v1
kind: Service
metadata:
  creationTimestamp: null
  labels:
    app: shopping
  name: shopping-deploy-v2
  namespace: shopping
spec:
  type: NodePort
  ports:
  - port: 80
    protocol: TCP
    targetPort: 5000
  selector:
    app: shopping
    version: v2.0
status:
  loadBalancer: {}
