k3-milestone-4/ingress.shopping.v1.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ing-shopping-v1 
  namespace: shopping
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  rules:
    - host: shopping.com 
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: shopping-deploy-v1 
                port:
                  number: 80
