k3-milestone-4/ingress.shopping.v2.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ing-shopping-v2 
  namespace: shopping
  labels:
    app: shopping
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$1
    nginx.ingress.kubernetes.io/canary: "true"
    nginx.ingress.kubernetes.io/canary-weight: "100"
spec:
  rules:
    - host: shopping.com 
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: shopping-deploy-v2
                port:
                  number: 80
